[package]
name = "hyperabstract"
version = "0.1.0"
build = "build.rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rfd = "^0.10.0"
serde = {version = "^1.0.152", features = ["derive"]}
serde_json = "^1.0.91"
slint = "0.3.3"

[build-dependencies]
slint-build = "0.3.3"
